--- a/styles/global.css
+++ b/styles/global.css
@@ -9,4 +9,8 @@
     @apply flex justify-center items-center;
 }
 
+.elevation4 {
+    box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
+}
+
 @tailwind utilities;
