--- a/styles/font.css
+++ b/styles/font.css
@@ -1,3 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap");
+
+.mobile-serif {
+    font-family: "Noto Serif JP", serif;
+}
+
+.mobile-sans {
+    font-family: "Noto Sans JP", sans-serif;
+}
+
 @font-face {
     font-family: "MyEllipsis";
     font-weight: normal;
