--- a/styles/font.css
+++ b/styles/font.css
@@ -1,5 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@300&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@300&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+JP&display=swap");
+
+/* @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap");
 
 .mobile-serif {
     font-family: "Noto Serif JP", serif;
